# autonomous-drone

./: .gitignore  CLAUDE.md  README.md  package-lock.json
Drone tests/: README.md  platformio.ini
Drone tests/testfiles/: test1_individual_motors.cpp  test2_direction_test.cpp  test3_speed_sweep.cpp  test4_hover_balance.cpp  test5_serial_control.cpp  test6_ramp_test.cpp  test7_emergency_stop.cpp  test8_bluetooth_ready.cpp
documentation/: Bels Part List - Sheet1.csv  Demo_Outline.md  Group 3 Draft Design Document.md  Parts Information - Parts List.csv  litewing-pairing.md  need-goal.md  test-documentation.md  test-plan.md  test_plan.md
documentation/diagrams/: block-diagram.excalidraw  state-transition-diagrams.excalidraw  wiring-diagram.excalidraw
documentation/images/: Part Studio 1(1).stl
documentation/markdown/: 10_Appendix_5.md  11_Appendix_6.md  12_Appendix_7.md  2_Table_of_Contents.md
drone_ble/: BLE_PROTOCOL_MOBILE.md
drone_ble/main/: CMakeLists.txt  bleprph.h  gatt_svr.c  main.c  motor.c  motor.h
flight_control/: CMakeLists.txt  sdkconfig.defaults
flight_control/main/: CMakeLists.txt  Kconfig.projbuild  icm42670p.c  icm42670p.h  main.c  main_imu_test.c  motor.c  motor.h  pid.c  pid.h
initial_mobile_code/: IOS_CLOUD_BUILD.md  app.json  eas.json  package-lock.json  package.json
initial_mobile_code/app/: _layout.tsx
mobile/: app.json  eas.json  package-lock.json  package.json
mobile/__tests__/: crtp.test.ts
mobile/app/: _layout.tsx
mobile/docs/: litewing-pairing.md
motor_tests/: .gitignore  CMakeLists.txt
old_motor_code/: README.md
(+35 files in other folders)
